@@ -34,6 +34,13 @@ class Par2Backend(backend.Backend):
     """
     def __init__(self, parsed_url):
         backend.Backend.__init__(self, parsed_url)
+
+        global pexpect
+        try:
+            import pexpect
+        except ImportError:
+            raise
+
         self.parsed_url = parsed_url
         try:
             self.redundancy = globals.par2_redundancy
@@ -65,8 +72,6 @@ class Par2Backend(backend.Backend):
         temp-filename later on. So first of all create a tempdir and symlink
         the soure_path with remote_filename into this.
         """
-        import pexpect
-
         par2temp = source_path.get_temp_in_same_dir()
         par2temp.mkdir()
         source_symlink = par2temp.append(remote_filename)
@@ -106,7 +111,6 @@ class Par2Backend(backend.Backend):
         If "par2 verify" detect an error transfer the Par2-volumes into the
         temp-dir and try to repair.
         """
-        import pexpect
         par2temp = local_path.get_temp_in_same_dir()
         par2temp.mkdir()
         local_path_temp = par2temp.append(remote_filename)
