@@ -326,6 +326,10 @@ New in v0.8.00 (2016/07/??)
   - Change util.fsdecode to use "replace" instead of "ignore" (matching behaviour of util.ufn)
   - Replace all uses of ufn with fsdecode
   - Make backend.tobytes use util.fsencode rather than reimplementing
+* Reduce dependencies on backend libraries
+  - Moved backend imports into backend class __init__ method
+  - Surrounded imports with try/except to allow better errors
+  - Put all library dependencies in requirements.txt
 
 
 New in v0.7.08 (2016/07/02)
